Fix a DCHECK on switchover to SwiftShader.

Attempting to get the termination status of a process that was
never launched is unwise.

TBR: piman@chromium.org
Bug: 773684
Change-Id: Ib03b326bd13499192c9b1227285905c59d0dd751
Reviewed-on: https://chromium-review.googlesource.com/712701
Reviewed-by: Sigurður Ásgeirsson <siggi@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Sigurður Ásgeirsson <siggi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508038}
Former-commit-id: a14628013711891a600348b52153d9b36c2ba067